# SBFEM_Cpp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  main.cpp
data/: Domain.json  config.json  cook_1.json  ds.json  rect_1.json
docs/: Doxyfile.in
gtests/: CMakeLists.txt  gtest_math.cpp
include/: FortranInteroperability.h  GraphicsController.h  MaterialData.h  NURBSVisualization.h  ShapeFunctionType.h  SuperElement.h  SuperElementJson.h  exceptions.h  helper_functions.h  plot.h  reorder_schur.h  sbfem_driver.h  sbfem_functions.h  sbfem_math.h  z_mat.h
src/: CMakeLists.txt  FortranInteroperability.cpp  GraphicsController.cpp  MaterialData.cpp  NURBSVizalisation.cpp  ShapeFunctionType.cpp  SuperElement.cpp  SuperElementJson.cpp  helper_functions.cpp  plot.cpp  reorder_schur.cpp  sbfem_driver.cpp  sbfem_functions.cpp  sbfem_math.cpp  z_mat.cpp
src/fortran/: helper_functions.f90  sbfem_functions.f90
tests/: CMakeLists.txt  test_main.cpp  test_math.cpp  test_sbfem_fct.cpp
